2015-08-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-08-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-07-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/util/setup_dll.rb, README.md: This library is tested on Linux. (Thanks: @cedlemo (https://github.com/cedlemo))
	* lib/opengl_common.rb, etc. (self.load_lib): All load_dll's are renamed to load_lib. (Thanks: @cedlemo (https://github.com/cedlemo))

2015-07-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-07-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb, glfw30.rb (glfwGetCursorPos): Fixed signature ((void*, void*, void*) -> (void*, double*, double*))

2015-07-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-05-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-05-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-04-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-04-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-03-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-03-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-03-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-02-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-01-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-01-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.1 features ( http://www.glfw.org/docs/latest/news.html#news_31 ).
	* glfw30.rb: Previous version of 'glfw.rb' is available as 'glfw30.rb'.

2015-01-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
